--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="./src/assets/worldLogo.svg" />
+    <link rel="icon" type="image/png" href="./src/assets/logo-travel.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Journal</title>
   </head>
